...
        android:text="@string/my_movies_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/location_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="#FFFFFF"
        android:hint="@string/location_hint"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:backgroundTint="#FFFFFF"
        android:layout_above="@+id/find_movies_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/find_movies_button"
...
